--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -7,30 +7,28 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-09-07 17:15+0000\n"
-"PO-Revision-Date: 2021-07-20 16:26+0900\n"
+"PO-Revision-Date: 2021-11-17 16:58+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/mailer.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Testing email sending"
+#, no-wrap
 msgid "Sending emails using SMTP"
-msgstr "メール送信のテスト"
+msgstr "SMTPでのメールの送信"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:13
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can send emails using an SMTP server.  This is a getting started guide.  Check the xref:mailer-reference.adoc[Quarkus Mailer Reference documentation] for more complete explanation about the mailer and its usage."
-msgstr "このガイドでは、QuarkusアプリケーションがSMTPサーバーを使用して電子メールを送信する方法を説明します。このガイドは入門編です。メーラーやその使用方法の詳細については、 link:mailer-reference.html[Quarkus Mailer Referenceドキュメント]をご確認ください。"
+msgstr "このガイドでは、QuarkusアプリケーションがSMTPサーバーを使用して電子メールを送信する方法を説明します。このガイドは入門編です。mailerの詳細やその使用方法については、 link:mailer-reference.html[Quarkus Mailer リファレンスドキュメント]をご確認ください。"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:14
@@ -45,42 +43,31 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:19
-#, fuzzy
-#| msgid "less than 15 minutes"
 msgid "less than 15 minutes,"
 msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:20
-#, fuzzy
-#| msgid "The SMTP hostname, port and credentials, and an email address"
 msgid "The SMTP hostname, port and credentials, and an email address,"
 msgstr "SMTPホスト名、ポート、資格情報、および電子メール アドレス"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:21
-#, fuzzy
-#| msgid "an IDE"
 msgid "an IDE,"
 msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:22
-#, fuzzy
 msgid "cURL,"
-msgstr "cURLです。"
+msgstr "cURL"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:23
-#, fuzzy
-#| msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately,"
-msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
+msgstr "JDK 11 がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:24
-#, fuzzy
-#| msgid "Apache Maven {maven-version}"
 msgid "Apache Maven {maven-version},"
 msgstr "Apache Maven {maven-version}"
 
@@ -97,55 +84,47 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:29
-#, fuzzy
 msgid "In this guide, we will build an application:"
-msgstr "このガイドでは、アプリケーションを作成します。"
+msgstr "このガイドでは、次のアプリケーションを作成します:"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:31
-#, fuzzy
 msgid "exposing an HTTP endpoint,"
-msgstr "HTTPエンドポイントを公開しています。"
+msgstr "HTTPエンドポイントを公開している"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:32
-#, fuzzy
 msgid "sending email when the endpoint receives an HTTP request."
-msgstr "エンドポイントがHTTPリクエストを受信したときにメールを送信する。"
+msgstr "エンドポイントがHTTPリクエストを受信したときにメールを送信"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:34
-#, fuzzy
 msgid "The application will demonstrate how to send emails using the _imperative_ and _reactive_ mailer APIs."
-msgstr "このアプリケーションでは、 _命令型_および _反応型の_メーラーAPIを使用して電子メールを送信する方法を説明します。"
+msgstr "このアプリケーションでは、 _命令型_ および _リアクティブ型_ のmailer APIを使用して電子メールを送信する方法をデモします。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:36
-#, fuzzy
 msgid "Attachments, inlined attachments, templating, testing and more advanced configuration are covered in the xref:mailer-reference.adoc[Mailer Reference documentation]."
 msgstr "添付ファイル、インライン化された添付ファイル、テンプレート化、テスト、より高度な設定については、 link:mailer-reference.html[Mailer Referenceドキュメント]で説明されています。"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:41
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
 msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:43
-#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
 msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:45
-#, fuzzy
 msgid "The solution is located in the `mailer-quickstart` {quickstarts-tree-url}/mailer-quickstart[directory]."
 msgstr "このソリューションは `mailer-quickstart` {quickstarts-tree-url}/mailer-quickstart[directory]にあります。"
 
@@ -157,45 +136,39 @@ msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:50
-#, fuzzy
 msgid "First, we need a project.  Open your browser to https://code.quarkus.io and select the following extensions:"
-msgstr "まず、プロジェクトを用意します。ブラウザを https://code.quarkus.io に開き、以下の拡張機能を選択します。"
+msgstr "まず、プロジェクトを用意します。ブラウザで https://code.quarkus.io を開き、以下のエクステンションを選択します。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:52
-#, fuzzy
 msgid "Resteasy Reactive - we use it to expose our HTTP endpoint"
 msgstr "Resteasy Reactive - HTTPエンドポイントを公開するために使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:53
-#, fuzzy
 msgid "Mailer - which offer the possibility to send emails"
-msgstr "メーラー - 電子メールの送信が可能な製品"
+msgstr "Mailer - 電子メールの送信を可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:54
-#, fuzzy
 msgid "Qute - the Quarkus template engine"
 msgstr "Qute - Quarkusのテンプレートエンジン"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:59
-#, fuzzy
 msgid "Alternatively, this https://code.quarkus.io/?a=quarkus-mailer-getting-started&nc=true&e=resteasy-reactive&e=qute&e=mailer&extension-search=mail[link] pre-configures the application.  Click on \"Generate your application\", download the zip file and unzip it on your file system.  Open the generated project in your IDE.  In a terminal, navigate to the project and run `mvn quarkus:dev`."
-msgstr "あるいは、この link:https://code.quarkus.io/?a=quarkus-mailer-getting-started&amp;nc=true&amp;e=resteasy-reactive&amp;e=qute&amp;e=mailer&amp;extension-search=mail[リンク]からアプリケーションを事前に設定することもできます。Generate your application \"をクリックして、ZIPファイルをダウンロードし、お使いのファイルシステムで解凍します。生成されたプロジェクトをお使いのIDEで開きます。ターミナルで、プロジェクトに移動し、 `mvn quarkus:dev` を実行します。"
+msgstr "あるいは、この https://code.quarkus.io/?a=quarkus-mailer-getting-started&nc=true&e=resteasy-reactive&e=qute&e=mailer&extension-search=mail[リンク] からアプリケーションを事前に設定することもできます。\"Generate your application\" をクリックして、ZIPファイルをダウンロードし、お使いのファイルシステムで解凍します。生成されたプロジェクトをお使いのIDEで開きます。ターミナルで、プロジェクトに移動し、 `mvn quarkus:dev` を実行します。"
 
 #. type: Title ===
 #: upstream/_guides/mailer.adoc:61
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Implement the HTTP endpoint"
 msgstr "HTTPエンドポイントの実装"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:64
-#, fuzzy
 msgid "First, create the `src/main/java/org/acme/MailResource.java` file, with the following content:"
-msgstr "まず、 `src/main/java/org/acme/MailResource.java` 、以下の内容のファイルを作成します。"
+msgstr "まず、以下の内容で `src/main/java/org/acme/MailResource.java` というファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:68
@@ -259,45 +232,38 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:96
-#, fuzzy
 msgid "Configure the root path of our HTTP endpoint"
 msgstr "HTTPエンドポイントのルートパスの設定"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:97
-#, fuzzy
 msgid "Inject the `Mailer` object managed by Quarkus"
-msgstr "Quarkusが管理する `Mailer` オブジェクトを注入する。"
+msgstr "Quarkusが管理する `Mailer` オブジェクトを注入"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:98
-#, fuzzy
 msgid "Create a method that will handle the HTTP GET request on `/mail`"
-msgstr "のHTTP GETリクエストを処理するメソッドを作成します。 `/mail`"
+msgstr "`/mail` へのHTTP GETリクエストを処理するメソッドを作成"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:99
-#, fuzzy
 msgid "Because we are using RESTEasy Reactive and the _imperative_ mailer, we need to add the `@Blocking` annotation. We will see later the reactive variant."
-msgstr "RESTEasy Reactiveと _imperative_mailerを使用しているので、 `@Blocking` アノテーションを追加する必要があります。リアクティブバージョンについては後ほど説明します。"
+msgstr "RESTEasy Reactiveと _命令型_ mailerを使用しているので、 `@Blocking` アノテーションを追加する必要があります。リアクティブ型バージョンについては後ほど説明します。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:100
-#, fuzzy
 msgid "Create a `Mail` object by configuring the _to_ recipient, the subject and body"
-msgstr "受信 _者_、件名、本文を設定して、 `Mail` オブジェクトを作成します。"
+msgstr "_to_ (受信者)、件名、本文を設定して、 `Mail` オブジェクトを作成"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:103
-#, fuzzy
 msgid "The `MailResource` class implements the HTTP API exposed by our application.  It handles `GET` request on `http://localhost:8080/mail."
-msgstr "`MailResource` クラスは，アプリケーションが公開しているHTTP APIを実装したものである。このクラスは `http://localhost:8080/mail.' に対する `GET` のリクエストを扱います。"
+msgstr "`MailResource` クラスは，アプリケーションが公開しているHTTP APIを実装します。このクラスは `http://localhost:8080/mail.' に対する `GET` のリクエストを扱います。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:105
-#, fuzzy
 msgid "So, if in another terminal, you run:"
-msgstr "つまり、別の端末で、実行すると"
+msgstr "つまり、別の端末で、次を実行すると"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:109
@@ -307,7 +273,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:112 upstream/_guides/mailer.adoc:171
-#, fuzzy
 msgid "You should see in the application log something like:"
 msgstr "アプリケーションログに以下のような内容が表示されているはずです。"
 
@@ -323,26 +288,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:123
-#, fuzzy
 msgid "As the application runs in _dev mode_, it simulates the sending of the emails.  It prints it in the log, so you can check that what was about to be sent."
-msgstr "このアプリケーションは _devモード_で動作しているので、メール送信のシミュレーションを行います。それをログに出力するので、何が送信されようとしているのかを確認することができます。"
+msgstr "このアプリケーションは _devモード_ で動作しているので、メール送信のシミュレーションを行います。それをログに出力するので、何が送信されようとしているのかを確認することができます。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:126
-#, fuzzy
 msgid "This section used the _imperative_ mailer API.  It blocks the caller thread until the mail is sent."
-msgstr "このセクションでは、 _imperative_mailer APIを使用しました。メールが送信されるまで呼び出し元のスレッドをブロックします。"
+msgstr "このセクションでは、 _命令型_ mailer APIを使用しました。メールが送信されるまで呼び出し元のスレッドをブロックします。"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:127
-#, fuzzy, no-wrap
-#| msgid "Using SSL with native executables"
+#, no-wrap
 msgid "Using the reactive mailer"
-msgstr "ネイティブ実行ファイルでSSLを使用"
+msgstr "リアクティブmailerの使用"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:131
-#, fuzzy
 msgid "The last section use the _imperative_ mailer.  Quarkus also offers a reactive API."
 msgstr "最後のセクションでは、 _命令型の_メーラーを使用しています。QuarkusはリアクティブなAPIも提供しています。"
 
@@ -354,15 +315,13 @@ msgstr "Mutiny"
 
 #. type: delimited block =
 #: upstream/_guides/mailer.adoc:138
-#, fuzzy
 msgid "The reactive mailer uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr "リアクティブメーラーはMutiny link:getting-started-reactive#mutiny[リアクティブタイプ] を使用しています。"
+msgstr "リアクティブ MailerはMutiny link:getting-started-reactive#mutiny[リアクティブ型] を使用しています。xref:mutiny-primer.adoc[Mutiny - 直感的リアクティブプログラミングライブラリ] をチェックしてください。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:141
-#, fuzzy
 msgid "In the same class, add:"
-msgstr "同じクラスで、追加。"
+msgstr "同じクラスに以下を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:146
@@ -390,34 +349,28 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:159
-#, fuzzy
-#| msgid "`io.quarkus.mailer.ReactiveMailer` is deprecated in favor of `io.quarkus.mailer.reactive.ReactiveMailer`."
 msgid "Inject the reactive mailer. The class to import is `io.quarkus.mailer.reactive.ReactiveMailer`."
-msgstr "`io.quarkus.mailer.ReactiveMailer` は `io.quarkus.mailer.reactive.ReactiveMailer` に代わって非推奨となりました。"
+msgstr "リアクティブmailerをインジェクトします。インポートされるクラスは `io.quarkus.mailer.reactive.ReactiveMailer` です。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:160
-#, fuzzy
 msgid "Configure the path to handle GET request on `/mail/reactive`. Note that because we are using the reactive API, we don't need `@Blocking`"
-msgstr "`/mail/reactive` の GET リクエストを処理するためのパスを設定します。なお、ここではリアクティブAPIを使用しているために `@Blocking`"
+msgstr "`/mail/reactive` への GET リクエストを処理するためのパスを設定します。なお、ここではリアクティブAPIを使用しているため、 `@Blocking` は必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:161
-#, fuzzy
 msgid "The method returns a `Uni<Void>` which completes when the mail is sent. It does not block the caller thread."
-msgstr "このメソッドは、メールが送信されたときに完了する `Uni&amp;lt;Void&amp;gt;` を返します。このメソッドは、呼び出し元のスレッドをブロックしません。"
+msgstr "このメソッドは、メールが送信されたときに完了する `Uni<Void>` を返します。このメソッドは、呼び出し元のスレッドをブロックしません。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:162
-#, fuzzy
 msgid "The API is similar to the _imperative_ one except that the `send` method returns a `Uni<Void>`."
-msgstr "APIは、 `send` メソッドが `Uni&amp;lt;Void&amp;gt;` を返すことを除いて、 _命令型_のものと似ています。"
+msgstr "APIは、 `send` メソッドが `Uni<Void>` を返すことを除いて、 _命令型_のものと似ています。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:164
-#, fuzzy
 msgid "Now, in your terminal, run"
-msgstr "次に、ターミナルで"
+msgstr "次に、ターミナルで以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:168
@@ -439,20 +392,17 @@ msgstr ""
 #: upstream/_guides/mailer.adoc:180
 #, no-wrap
 msgid "Configuring the mailer"
-msgstr "メーラーの設定"
+msgstr "mailerの設定"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:184
-#, fuzzy
 msgid "It's time to configure the mailer to not simulate the sending of the emails.  The Quarkus mailer is using SMTP, so make sure you have access to a SMTP server."
-msgstr "そろそろメールの送信をシミュレートしないようにメーラーを設定しましょう。QuarkusのメーラーはSMTPを使用しているので、SMTPサーバーにアクセスできることを確認してください。"
+msgstr "そろそろメールの送信をシミュレートしないようにmailerを設定しましょう。QuarkusのmailerはSMTPを使用しているので、SMTPサーバーにアクセスできることを確認してください。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:188
-#, fuzzy
-#| msgid "The Quarkus mailer is using SMTP. In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables."
 msgid "In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables.  See the xref:config-reference.adoc[configuration reference guide] for details."
-msgstr "Quarkus mailerはSMTPを使用しています。 `src/main/resources/application.properties` ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティーや環境変数を使って設定することもできるのを覚えておいてください。"
+msgstr "Quarkus mailerはSMTPを使用しています。 `src/main/resources/application.properties` ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティーや環境変数を使って設定することもできるのを覚えておいてください。詳しくはxref:config-reference.adoc[設定リファレンスガイド] を参照して下さい。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:190
@@ -493,9 +443,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:212
-#, fuzzy
 msgid "Once you have configured the mailer, if you call the HTTP endpoint as shown above, you will send emails."
-msgstr "メーラーの設定が完了したら、上記のようにHTTPエンドポイントを呼び出すと、メールが送信されます。"
+msgstr "mailerの設定が完了したら、上記のようにHTTPエンドポイントを呼び出すと、メールが送信されます。"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:213
@@ -505,38 +454,31 @@ msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:217
-#, fuzzy
-#| msgid "This guide has shown how you can send emails from a Quarkus application.  The _mailer_ extension works in JVM and native mode."
 msgid "This guide has shown how to send emails from your Quarkus application.  The xref:mailer-reference.adoc[mailer reference guide] provides more details about the mailer usage and configuration such as:"
 msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _mailer_ エクステンションは、JVMとネイティブモードで動作します。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:219
-#, fuzzy
 msgid "xref:mailer-reference.adoc#attachments[how to add attachments]"
 msgstr "link:mailer-reference.html#attachments[添付ファイルの付け方]"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:220
-#, fuzzy
 msgid "xref:mailer-reference.adoc#html[how to format the email as HTML and use inline attachments]"
 msgstr "link:mailer-reference.html#html[メールをHTML形式にして、インライン添付を使用する方法]"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:221
-#, fuzzy
 msgid "xref:mailer-reference.adoc#templates[how to use Qute templates]"
 msgstr "link:mailer-reference.html#templates[Quteテンプレートの使い方]"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:222
-#, fuzzy
 msgid "xref:mailer-reference.adoc#testing[how to test applications sending emails]"
 msgstr "link:mailer-reference.html#testing[電子メールを送信するアプリケーションのテスト方法]"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:223
-#, fuzzy
 msgid "xref:mailer-reference.adoc#gmail-specific-configuration[how to configure the mailer to send emails with GMAIL]"
 msgstr "link:mailer-reference.html#gmail-specific-configuration[GMAILでメールを送信するためのメーラーの設定方法]"
 
