--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-23 02:22+0000\n"
+"POT-Creation-Date: 2021-11-24 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15050,7 +15050,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:7991
 #, no-wrap
-msgid "`registry.access.redhat.com/ubi8/ubi-minimal`"
+msgid "`quay.io/quarkus/quarkus-micro-image:1.0`"
 msgstr ""
 
 #. type: Table
