--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-11-30-quarkus-native-neo4j-call-tree.adoc.po, 0, 61, 0, 1475 ,100%
 l10n/po/ja_JP/_posts/2021-11-24-quarkus-2-5-0-final-released.adoc.po, 0, 57, 0, 746 ,100%
 l10n/po/ja_JP/_posts/2021-11-12-quarkus-2-4-2-final-released.adoc.po, 0, 14, 0, 153 ,100%
 l10n/po/ja_JP/_posts/2021-11-11-quarkus-newsletter-14.adoc.po, 0, 6, 0, 158 ,100%
