--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-01 02:26+0000\n"
+"POT-Creation-Date: 2021-12-03 02:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -750,7 +750,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:355
 #, fuzzy
 #| msgid "Please see link:security-openid-connect-client#token-propagation[Token Propagation] section about the Authorization Code Flow access token propagation to the downstream services."
-msgid "Please see link:security-openid-connect#token-verification-introspection for details about how the tokens are verified and introspected."
+msgid "Please see link:security-openid-connect#token-verification-introspection[Token Verification And Introspection] for details about how the tokens are verified and introspected."
 msgstr "下流サービスへの認可コードフローアクセストークンの伝播については、 link:security-openid-connect-client#token-propagation[トークン伝播] の項を参照してください。"
 
 #. type: Plain text
@@ -773,7 +773,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:364
 #, fuzzy
 #| msgid "Please see link:security-openid-connect-client#token-propagation[Token Propagation] section about the Authorization Code Flow access token propagation to the downstream services."
-msgid "Please see link:security-openid-connect#token-introspection-userinfo-cache for more information about using a default token cache or registering a custom cache implementation."
+msgid "Please see link:security-openid-connect#token-introspection-userinfo-cache[Token Introspection and UserInfo cache] for more information about using a default token cache or registering a custom cache implementation."
 msgstr "下流サービスへの認可コードフローアクセストークンの伝播については、 link:security-openid-connect-client#token-propagation[トークン伝播] の項を参照してください。"
 
 #. type: Title ===
